--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.govind</groupId>
   <artifactId>my-maven-project</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>my-maven-project</name>
   <url>http://maven.apache.org</url>
   <dependencies>
